<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_restricted_profile_text">Accessing accounts from a restricted profile is not supported.</string>
    <string name="common_google_play_services_restricted_profile_title">Restricted Profile</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="place_autocomplete_clear_button">Clear search</string>
    <string name="place_autocomplete_search_hint">Search</string>
    <string name="pull_to_refresh_pull_label">Pull to refresh…</string>
    <string name="pull_to_refresh_refreshing_label">Loading…</string>
    <string name="pull_to_refresh_release_label">Release to refresh…</string>
    <string name="a4s_content_back">Back</string>
    <string name="a4s_popup_dismiss">Dismiss</string>
    <string name="a4s_popup_open">Open</string>
    <string name="about_editor_info_text">"S-money, electronic money institution approved and controlled in France by the French Prudential Supervision and Resolution Authority, 61 rue Taitbout 75436 Paris Cedex 09), a simplified joint-stock company with the capital of 11 037 000 euros, a company of the BPCE group.

Head office: 28 villa de Lourcine, 75014 PARIS.

RCS Paris nÂ°501 586 341.



Director of publication: Monsieur Nicolas CHATILLON

v%1$s"</string>
    <string name="about_editor_info_text_2">"BPCE - Société anonyme à directoire et conseil de surveillance, au capital de 155 742 320 €. Siège social : 50, avenue Pierre Mendès France - 75201 Paris Cedex 1. RCS Paris n° 493 455 042. BPCE, intermédiaire d'assurance inscrit à l'ORIAS sous le n°08 045 100."</string>
    <string name="about_title">About</string>
    <string name="action_settings">Settings</string>
    <string name="activate">Activate my account</string>
    <string name="activation_activate_your_connection_title">Activate your account</string>
    <string name="activation_add_phone_number_description">We will send you an confirmation SMS to validate your mobile phone number.</string>
    <string name="activation_add_phone_number_receipt">Receive SMS</string>
    <string name="activation_add_phone_number_text">Mobile phone number</string>
    <string name="activation_add_phone_number_title">Mobile phone number</string>
    <string name="activation_cgu_security">Security</string>
    <string name="add_transfer_account_result_header">Summary</string>
    <string name="add_transfer_account_tv_alias">"Ex: Patrick's account"</string>
    <string name="add_transfer_account_tv_bic">BIC</string>
    <string name="add_transfer_account_tv_bic_description">A BIC is an international bank identifier which can be found on your statement of account information.</string>
    <string name="add_transfer_account_tv_iban">IBAN</string>
    <string name="add_transfer_account_tv_iban_description">An IBAN is an international account identifier which can be found on your statement of account information.</string>
    <string name="address_twitter">Twitter address</string>
    <string name="alias_account">Alias account</string>
    <string name="amount">Amount</string>
    <string name="change_password_b_confirm">Validate</string>
    <string name="change_password_et_new_password">New secret code</string>
    <string name="change_password_et_new_password_confirm">Secret code confirmation</string>
    <string name="change_password_et_old_password">Old secret code</string>
    <string name="change_password_tv_info">The code cannot contain 6 identical digits. Series of numbers and dates of birth are not allowed: 111111, 123456, 987654…</string>
    <string name="complementary_information">Other information</string>
    <string name="confirm_result_tv_new_balance">New balance</string>
    <string name="confirm_result_tv_old_balance">Old balance</string>
    <string name="date">Date</string>
    <string name="destinataire">Recipient</string>
    <string name="fill_information">Please fill in the information</string>
    <string name="hint_char_iban">8 to 11 characters</string>
    <string name="hint_char_rib">27 characters on your RIB</string>
    <string name="informations_general">General information</string>
    <string name="mail_perso">Personal e-mail address</string>
    <string name="mail_univ">University e-mail address</string>
    <string name="message">Message</string>
    <string name="modify_password">Change my secret code</string>
    <string name="my_account_b_modify">Validate changes</string>
    <string name="my_account_edit_help_msg_for_company_code">Company code</string>
    <string name="my_account_edit_help_msg_for_expiration_date_crous">End date of your CROUS rights</string>
    <string name="my_account_edit_help_msg_for_fare_code">Fare code</string>
    <string name="my_account_edit_help_msg_for_phone">You can change your phone number in the personal area of the Izly website in the My Profile section.</string>
    <string name="my_account_edit_user_profile_updated_dialog_message">Your changes have been taken into account.</string>
    <string name="oauth_information">Identification information</string>
    <string name="postal_address">Postal address</string>
    <string name="profil_et_end_date_crous_hint">End date of your CROUS rights</string>
    <string name="profil_et_price_code_hint">Price code</string>
    <string name="profil_et_society_code_hint">Company code</string>
    <string name="receive_offers">Receive promotional offers</string>
    <string name="student_card_hint">Student card number</string>
    <string name="subscribe_b_birth_date_hint">Date of birth</string>
    <string name="subscribe_b_civility_hint">Title</string>
    <string name="subscribe_b_submit">Validate my registration</string>
    <string name="subscribe_et_city_hint">City</string>
    <string name="subscribe_et_country_hint">Country</string>
    <string name="subscribe_et_email_hint">Email</string>
    <string name="subscribe_et_first_name_hint">Name</string>
    <string name="subscribe_et_last_name_hint">Surname</string>
    <string name="subscribe_et_nickname_hint">Nickname</string>
    <string name="subscribe_et_password_confirm_hint">Confirm the secret code</string>
    <string name="subscribe_et_password_hint">Secret code(6 digits)</string>
    <string name="subscribe_et_phone_hint">Phone number</string>
    <string name="subscribe_et_postal_code_hint">Postcode</string>
    <string name="subscribe_et_secret_answer_hint">Answer</string>
    <string name="subscribe_et_secret_question_custom_hint">Personal question</string>
    <string name="subscribe_et_street_hint">Street</string>
    <string name="subscribe_help_msg_for_alias">"Alphanumeric characters and the following are allowed: -_.#
The nickname needs to start with a letter.
It is not case sensitive."</string>
    <string name="subscribe_help_msg_for_mail">"Please enter a valid e-mail address.
This will become your Izly ID when you log into Izly service."</string>
    <string name="subscribe_help_msg_for_password">Your date of birth, identical digits or consecutive digits are not allowed(111111 ; 123456 ; 987654 etc.).</string>
    <string name="subscribe_help_msg_for_phone">"Please enter a French mobile number.
This will become your Izly ID when you log into Izly service."</string>
    <string name="subscribe_tv_ilzy_opt_in">S-money partners</string>
    <string name="subscribe_tv_izly_opt_in">from Groupe BPCE / S-money, Izly service operator</string>
    <string name="subscribe_tv_partner_opt_in">I agree to receive promotional offers from S-Money partners</string>
    <string name="subscribe_tv_smoney_opt_in">I agree to receive S-Money promotional offers</string>
    <string name="transfer_account_detail_tv_bic">BIC:</string>
    <string name="transfer_account_detail_tv_iban">IBAN:</string>
</resources>