<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:smoney="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <fr.smoney.android.izly.ui.widget.CustomFontTextView android:text="@string/fill_information" style="@style/Izly.TextView_Title.Blue.Header" />
        <fr.smoney.android.izly.ui.widget.CustomFontTextView android:layout_marginLeft="@dimen/activity_vertical_margin" android:layout_marginTop="@dimen/activity_horizontal_margin" android:layout_marginRight="@dimen/activity_vertical_margin" android:layout_marginBottom="@dimen/default_margin" android:text="@string/alias_account" style="@style/Izly.TextView_grey" />
        <EditText android:id="@id/et_alias" android:layout_marginLeft="@dimen/activity_vertical_margin" android:layout_marginRight="@dimen/activity_vertical_margin" android:hint="@string/add_transfer_account_tv_alias" style="@style/Izly.EditText_Grey" />
        <fr.smoney.android.izly.ui.widget.CustomFontTextView android:layout_marginLeft="@dimen/activity_vertical_margin" android:layout_marginTop="@dimen/activity_horizontal_margin" android:layout_marginRight="@dimen/activity_vertical_margin" android:layout_marginBottom="@dimen/default_margin" android:text="@string/add_transfer_account_tv_bic" style="@style/Izly.TextView_grey" />
        <fr.smoney.android.izly.ui.widget.FormEditText android:id="@id/et_bic" android:layout_marginLeft="@dimen/activity_vertical_margin" android:layout_marginRight="@dimen/activity_vertical_margin" android:hint="@string/hint_char_iban" android:maxLength="@integer/bic_max_length" smoney:helpMsg="@string/add_transfer_account_tv_bic_description" style="@style/Izly.EditText_Grey" />
        <fr.smoney.android.izly.ui.widget.CustomFontTextView android:layout_marginLeft="@dimen/activity_vertical_margin" android:layout_marginTop="@dimen/activity_horizontal_margin" android:layout_marginRight="@dimen/activity_vertical_margin" android:layout_marginBottom="@dimen/default_margin" android:text="@string/add_transfer_account_tv_iban" style="@style/Izly.TextView_grey" />
        <fr.smoney.android.izly.ui.widget.FormEditText android:id="@id/et_iban" android:layout_marginLeft="@dimen/activity_vertical_margin" android:layout_marginRight="@dimen/activity_vertical_margin" android:layout_marginBottom="@dimen/default_margin" android:hint="@string/hint_char_rib" android:maxLength="@integer/iban_max_length" smoney:helpMsg="@string/add_transfer_account_tv_iban_description" style="@style/Izly.EditText_Grey" />
        <include layout="@layout/view_submit_button" />
    </LinearLayout>
</ScrollView>