<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:smoney="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <View android:id="@id/v_focus" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="0.0px" android:layout_height="0.0px" />
        <RelativeLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/handwritten_area_margin_top" android:layout_marginBottom="20.0dip">
            <fr.smoney.android.izly.ui.widget.HandWrittenTextView android:id="@id/hwtv_civility" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/subscribe_b_civility_hint" android:layout_alignParentLeft="true" style="@style/Smoney.Generic.HandWrittenTextView" />
            <ImageView android:id="@id/iv_arrow_civility" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="-10.0dip" android:layout_marginRight="10.0dip" android:src="@drawable/arrow_civilite" android:layout_toRightOf="@id/hwtv_civility" android:layout_below="@id/hwtv_civility" />
            <Button android:id="@id/b_civility" android:layout_width="fill_parent" android:hint="@string/subscribe_b_civility_hint" android:layout_toRightOf="@id/iv_arrow_civility" android:layout_alignParentRight="true" style="@style/Smoney.Subscribe.Button.Select" />
        </RelativeLayout>
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:gravity="center" android:id="@id/iv_photo" android:focusable="true" android:focusableInTouchMode="true" android:clickable="true" android:layout_width="@dimen/edit_photo_size_width" android:layout_height="@dimen/edit_photo_size_height" android:layout_marginRight="20.0dip" android:src="@drawable/subscribe_iv_photo_placeholder" android:scaleType="center" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" />
            <EditText android:id="@id/et_first_name" android:layout_marginBottom="10.0dip" android:hint="@string/subscribe_et_first_name_hint" android:layout_toRightOf="@id/iv_photo" android:layout_alignParentTop="true" android:inputType="textCapWords" style="@style/Smoney.Subscribe.EditText" />
            <EditText android:id="@id/et_last_name" android:layout_marginBottom="10.0dip" android:hint="@string/subscribe_et_last_name_hint" android:layout_toRightOf="@id/iv_photo" android:layout_below="@id/et_first_name" android:inputType="textCapWords" style="@style/Smoney.Subscribe.EditText" />
            <Button android:id="@id/b_birth_date" android:hint="@string/subscribe_b_birth_date_hint" android:layout_toRightOf="@id/iv_photo" android:layout_below="@id/et_last_name" style="@style/Smoney.Subscribe.Button.Select" />
        </RelativeLayout>
        <include android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="5.0dip" layout="@layout/layout_separation" />
        <ImageView style="@style/Smoney.Subscribe.ViewSeparator.Id" />
        <fr.smoney.android.izly.ui.widget.FormEditText android:id="@id/et_phone" android:layout_marginBottom="10.0dip" android:hint="@string/subscribe_et_phone_hint" android:inputType="phone" smoney:helpMsg="@string/subscribe_help_msg_for_phone" style="@style/Smoney.Subscribe.EditText" />
        <fr.smoney.android.izly.ui.widget.FormEditText android:id="@id/et_email" android:layout_marginBottom="10.0dip" android:hint="@string/subscribe_et_email_hint" android:inputType="textEmailAddress" smoney:helpMsg="@string/subscribe_help_msg_for_mail" style="@style/Smoney.Subscribe.EditText" />
        <fr.smoney.android.izly.ui.widget.FormEditText android:id="@id/et_nickname" android:layout_marginBottom="10.0dip" android:hint="@string/subscribe_et_nickname_hint" android:inputType="textEmailAddress" smoney:helpMsg="@string/subscribe_help_msg_for_alias" style="@style/Smoney.Subscribe.EditText" />
        <include layout="@layout/layout_separation" />
        <fr.smoney.android.izly.ui.widget.FormEditText android:id="@id/et_password" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" android:hint="@string/subscribe_et_password_hint" android:password="true" android:maxLength="@integer/pwd_max_length" android:inputType="number" smoney:helpMsg="@string/subscribe_help_msg_for_password" style="@style/Smoney.Subscribe.EditText" />
        <fr.smoney.android.izly.ui.widget.FormEditText android:id="@id/et_password_confirm" android:hint="@string/subscribe_et_password_confirm_hint" android:password="true" android:maxLength="@integer/pwd_max_length" android:inputType="number" smoney:helpMsg="@string/subscribe_help_msg_for_password" style="@style/Smoney.Subscribe.EditText" />
        <include android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="5.0dip" layout="@layout/layout_separation" />
        <ImageView style="@style/Smoney.Subscribe.ViewSeparator.Password" />
        <Spinner android:id="@id/sp_secret_question" android:paddingLeft="0.0dip" android:layout_marginBottom="10.0dip" style="@style/Smoney.Subscribe.Button.Select" />
        <EditText android:id="@id/et_secret_question_custom" android:visibility="gone" android:layout_marginBottom="10.0dip" android:hint="@string/subscribe_et_secret_question_custom_hint" android:inputType="textCapSentences" style="@style/Smoney.Subscribe.EditText" />
        <EditText android:id="@id/et_secret_answer" android:hint="@string/subscribe_et_secret_answer_hint" style="@style/Smoney.Subscribe.EditText" />
        <CheckBox android:textAppearance="?android:textAppearanceSmall" android:id="@id/cb_smoney_opt_in" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginBottom="0.0dip" android:text="@string/subscribe_tv_smoney_opt_in" />
        <CheckBox android:textAppearance="?android:textAppearanceSmall" android:id="@id/cb_partner_opt_in" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="0.0dip" android:layout_marginBottom="30.0dip" android:text="@string/subscribe_tv_partner_opt_in" />
        <Button android:id="@id/b_submit" android:layout_marginBottom="10.0dip" android:text="@string/subscribe_b_submit" style="@style/Smoney.Button.Blue.FillParent" />
    </LinearLayout>
</ScrollView>