<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:smoney="http://schemas.android.com/apk/res-auto">
    <TextView android:text="@string/modify_password" style="@style/Izly.TextView_Title.Blue.Header" />
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/activity_vertical_margin">
        <fr.smoney.android.izly.ui.widget.FormEditText android:id="@id/et_old_password" android:layout_marginBottom="@dimen/activity_vertical_margin" android:hint="@string/change_password_et_old_password" android:password="true" android:maxLength="@integer/pwd_max_length" android:inputType="number" smoney:helpMsg="@string/subscribe_help_msg_for_password" style="@style/Izly.EditText_Grey" />
        <fr.smoney.android.izly.ui.widget.FormEditText android:id="@id/et_new_password" android:layout_marginBottom="@dimen/activity_vertical_margin" android:hint="@string/change_password_et_new_password" android:password="true" android:maxLength="@integer/pwd_max_length" android:inputType="number" smoney:helpMsg="@string/subscribe_help_msg_for_password" style="@style/Izly.EditText_Grey" />
        <fr.smoney.android.izly.ui.widget.FormEditText android:id="@id/et_new_password_confirm" android:layout_marginBottom="@dimen/activity_vertical_margin" android:hint="@string/change_password_et_new_password_confirm" android:password="true" android:maxLength="@integer/pwd_max_length" android:inputType="number" smoney:helpMsg="@string/subscribe_help_msg_for_password" style="@style/Izly.EditText_Grey" />
        <TextView android:text="@string/change_password_tv_info" style="@style/Izly.TextView_grey" />
    </LinearLayout>
    <View android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" />
    <Button android:id="@id/b_confirm" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/change_password_b_confirm" style="@style/Izly.BlueButton" />
</LinearLayout>