<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <fr.smoney.android.izly.ui.widget.CustomFontTextView android:text="@string/add_transfer_account_result_header" style="@style/Izly.TextView_Title.Blue.Header" />
    <fr.smoney.android.izly.ui.widget.DetailTwoText android:id="@id/tv_alias" android:layout_width="fill_parent" android:layout_height="wrap_content" app:leftText="@string/alias_account" />
    <fr.smoney.android.izly.ui.widget.DetailTwoText android:id="@id/tv_bic" android:layout_width="fill_parent" android:layout_height="wrap_content" app:leftText="@string/transfer_account_detail_tv_bic" />
    <fr.smoney.android.izly.ui.widget.DetailTwoText android:id="@id/tv_iban" android:layout_width="fill_parent" android:layout_height="wrap_content" app:leftText="@string/transfer_account_detail_tv_iban" />
</LinearLayout>