<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <fr.smoney.android.izly.ui.widget.DetailTwoText android:id="@id/amount" android:layout_width="fill_parent" android:layout_height="wrap_content" app:leftText="@string/amount" />
    <fr.smoney.android.izly.ui.widget.DetailTwoText android:id="@id/date" android:layout_width="fill_parent" android:layout_height="wrap_content" app:leftText="@string/date" />
    <fr.smoney.android.izly.ui.widget.DetailTwoText android:id="@id/v_me_result_old_balance" android:layout_width="fill_parent" android:layout_height="wrap_content" app:leftText="@string/confirm_result_tv_old_balance" />
    <fr.smoney.android.izly.ui.widget.DetailTwoText android:id="@id/v_me_result_new_balance" android:layout_width="fill_parent" android:layout_height="wrap_content" app:leftText="@string/confirm_result_tv_new_balance" />
</LinearLayout>